🐛 fix: fix header z-index

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -10,6 +10,7 @@
   top: 0;
   padding: .5rem;
   margin: .5rem;
+  z-index: 1;
 }
 
 .i-podcast__header>h1 {
